<resources>
    <string name="app_name">WeHarvest</string>
    <string name="activity_login_username_hint">Username</string>
    <string name="activity_login_password_hint">Password</string>
    <string name="activity_login_button">LOG IN</string>
    <string name="activity_login_create_account">CREATE NEW ACCOUNT</string>

    <string-array name="titles">
        <item>Explore</item>
        <item>Profile</item>
        <item>Recipes</item>
        <item>Events</item>
        <item>About Us</item>
        <item>Sowing and Harvesting</item>
        <item>Log Out</item>
    </string-array>

    <string name="nav_explore">Explore</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_recipe">Recipes</string>
    <string name="nav_events">Events</string>
    <string name="nav_us">About Us</string>
    <string name="nav_sowing_harvesting">Sowing and Harvesting</string>
    <string name="nav_logout">Log Out</string>

    <string name="activity_recipes_create_orchard">¿How to create and Orchard?</string>
    <string name="activity_recipes_seeds">Seeds</string>
    <string name="activity_recipes_ground">Ground</string>
    <string name="activity_recipes_compound">Compound</string>
    <string name="activity_recipes_vertical_orchard">Vertical orchard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="progress_bar">Loading your farms...</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome!</string>
    <string name="slide_1_desc">The easiest way to learn about urban farms and join a community!</string>

    <string name="slide_2_title">Events</string>
    <string name="slide_2_desc">Find out about the events that are being organized!</string>

    <string name="slide_3_title">Learn</string>
    <string name="slide_3_desc">Get to know the best practices to plant, harvest and cook!</string>

    <string name="slide_4_title">Ask</string>
    <string name="slide_4_desc">Make your queries to the database to know what you can plant in your city by season.</string>

    <string name="play_again">Play Again</string>

    <string name="activity_create_account_username_hint">Username</string>
    <string name="activity_create_account_password_hint">Password</string>
    <string name="activity_create_account_confirm_password_hint">Confirm Password</string>
    <string name="activity_create_account_signup">Create</string>
    <string name="activity_create_account_text_view">Create Account</string>
    <string name="activity_login_password_error">Passwords doesnt match</string>

    <string name="create_event">Create Event</string>
    <string name="create_event_hint">Event Name</string>
    <string name="create_recipe_hint">Recipe Name</string>
    <string name="create_event_place_hint">Enter Place</string>
    <string name="create_description">Enter description</string>
    <string name="create_description_recipe">Enter Recipe Description</string>
    <string name="create_submit">Create</string>

</resources>
